# KaggleMateAI

./: .gitignore  LICENSE  README.md  poc.ipynb  pyproject.toml
data/: Competitions.csv  competition_with_embeddings.csv  competitions_with_descriptions.csv
data/faiss_index/: index.faiss  index.pkl
kmai/adapters/: competition_scrapper.py  csv_handler.py  csv_reader.py  csv_writer.py  faiss.py  faiss_helper.py  kaggle_downloader.py  llm_caller.py
kmai/adapters/stubs/: stub_competition_scrapper.py  stub_csv_handler.py  stub_csv_reader.py  stub_csv_writer.py  stub_faiss.py  stub_kaggle_dowloader.py  stub_llm_caller.py  stup_competition_scrapper.py
kmai/config/: settings.py
kmai/domain/: data_preprocessing.py  retrieve_competition.py
kmai/ports/: competition_scrapper.py  csv_writer.py  icompetition_scrapper.py  icsv_handler.py  icsv_reader.py  icsv_writer.py  ikaggle_downloader.py  illm_caller.py  ivectorstore.py  ivectorstore_helper.py  kaggle_downloader.py  llm_caller.py
kmai/use_cases/: data_preprocessing.py  get_competitions.py  retrieve_competition.py
notebooks/: poc.ipynb
notebooks/data/faiss_index/: index.faiss  index.pkl
scripts/: get_similar_competition.py  update_data.py
tests/: test_competitions_embedding_csv.py  test_create_vector_store.py  test_data_collect.py  test_get_competitions_embedding_csv.py
