[tool.poetry]
name = "ml-kaggle"
version = "0.1.0"
description = ""
authors = ["rma <rma@infologic.fr>"]
readme = "README.md"
packages = [{include = "ml_kaggle"}]

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.5.16"
ipykernel = "^6.25.2"
langchain = {extras = ["llms"], version = "^0.0.288"}
pandas = "^2.1.0"
playwright = "^1.38.0"
nest-asyncio = "^1.5.8"
selenium = "^4.12.0"
beautifulsoup4 = "^4.12.2"
openai = "^0.28.0"
chromadb = "^0.4.12"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
